
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct page {int dummy; } ;
struct nameidata {int dummy; } ;
struct dentry {int dummy; } ;


 int kunmap (struct page*) ;
 int page_cache_release (struct page*) ;

void page_put_link(struct dentry *dentry, struct nameidata *nd, void *cookie)
{
 struct page *page = cookie;

 if (page) {
  kunmap(page);
  page_cache_release(page);
 }
}
